--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 <!DOCTYPE html>
+<html>
+    <link rel="stylesheet" href="index.css">
+    <head>
+        
+        <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+        <title>shipdrop.</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="contentpane" id="navbar">
+            <img id="logo1" src="/images/favicon.png" alt="logo">
+            <h1 id="navbartext">shipdrop.</h1>
+        </div>
+        <div class="contentpane" id="tripanel">
+            <div class="content tripanelcontent" id="left"></div>
+            <div class="content tripanelcontent" id="centreleft"></div>
+            <div class="content tripanelcontent" id="centreright"></div>
+            <div class="content tripanelcontent" id="right"></div>
+        </div>
+    </body>
+</html>
