--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         
         <link rel="icon" type="image/x-icon" href="/images/favicon.png">
-        <title>shipdrop.</title>
+        <title>shipdrip.</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <body>
         <div class="contentpane" id="navbar">
             <img id="logo1" src="/images/favicon.png" alt="logo">
-            <h1 id="navbartext">shipdrop.</h1>
+            <h1 id="navbartext">shipdrip.</h1>
         </div>
         <div class="contentpane" id="tripanel">
             <div class="content tripanelcontent" id="left"></div>
@@ -20,5 +20,6 @@
             <div class="content tripanelcontent" id="centreright"></div>
             <div class="content tripanelcontent" id="right"></div>
         </div>
+        <div class="contentpane" id="largepanel"></div>
     </body>
 </html>
