--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
     <script src="index.js"></script>
     <script>
+        const fs = require('fs')
+
         var page = 'home'; 
         var sidePanelActive = false;
         var panelID = 0;
+
+        getArtistData(""); 
     </script>
 </head>
 
